@@ -232,9 +232,7 @@
                "-XX:+UseG1GC"
                ~(str "-Xms" (heap-size "1G" "min"))
                ~(str "-Xmx" (heap-size "2G" "max"))
-               "-XX:+IgnoreUnrecognizedVMOptions"
-               "--add-modules=java.xml.bind"
-               "--add-modules=java.xml.ws"]
+               "-XX:+IgnoreUnrecognizedVMOptions"]
 
   :repl-options {:init-ns dev-tools}
 
